--- a/production/index.html
+++ b/production/index.html
@@ -62,31 +62,31 @@
                   <li><a><i class="fa fa-map-marker"></i> Pontos Turísticos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="cadastrar-ponto.html">Novo Ponto</a></li>
-                      <li><a href="#">Listar Pontos</a></li>
+                      <li><a href="listar-ponto.html">Listar Pontos</a></li>
                       <li><a href="cadastrar-categoria-ponto.html">Nova Categoria de Pontos</a></li>
-                      <li><a href="#">Listar Categoria de Pontos</a></li>						  
+                      <li><a href="listar-categoria-ponto.html">Listar Categoria de Pontos</a></li>								  
                     </ul>
                   </li>	
                   <li><a><i class="fa fa-road"></i> Roteiros Turísticos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">   
                       <li><a href="cadastrar-roteiro.html">Novo Roteiro</a></li>
-                      <li><a href="#">Listar Roteiros</a></li>
+                      <li><a href="listar-roteiro.html">Listar Roteiros</a></li>
                       <li><a href="cadastrar-categoria-roteiro.html">Nova Categoria Roteiros</a></li>
-                      <li><a href="#">Listar Categoria Roteiros</a></li>					  
+                      <li><a href="listar-categoria-roteiro.html">Listar Categoria Roteiros</a></li>						  
                     </ul>
                   </li>
                   <li><a><i class="fa fa-briefcase"></i> Parceiros <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="cadastrar-parceiro.html">Novo Parceiro</a></li>
-                      <li><a href="#">Listar Parceiros</a></li>
+                      <li><a href="listar-parceiro.html">Listar Parceiros</a></li>
                       <li><a href="cadastrar-categoria-parceiro.html">Nova Categoria Parceiros</a></li>
-                      <li><a href="#">Listar Categoria Parceiros</a></li>						  
+                      <li><a href="listar-categoria-parceiro.html">Listar Categoria Parceiros</a></li>						  
                     </ul>
                   </li>
                   <li><a><i class="fa fa-users"></i> Usuários <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="cadastrar-usuario.html">Novo Usuário</a></li>
-                      <li><a href="#">Listar Usuários</a></li>
+                      <li><a href="listar-usuario.html">Listar Usuários</a></li>
                     </ul>
                   </li>	
                   <li><a><i class="fa fa-line-chart"></i> Relatórios <span class="fa fa-chevron-down"></span></a>
